--- a/src/testPinButton.html
+++ b/src/testPinButton.html
@@ -184,7 +184,9 @@ var pairs = url.slice(url.indexOf('?') + 1).split('&');
     </script>
 </head>
 <body>
+<iframe>
 <a href="javascript:void(0)" id="PinItButton" title="Pin it on Pinterest">Pin it</a>
+</iframe>
 <div id="PinItCount" style="display:none;">
     <div id="CountPointer">&laquo;</div>
     <div id="CountBubble">0</div>
